tdf#163821 - sc fix XLOOKUP does not work correctly if the search

array and result array are each entered as an array with curly brackets

In case of the result array is a matrix we need to push them as values
instead of SingleRef-s, same as what we are doing in case of results with multiple rows or columns.

Also fix tdf#164004 - XLOOKUP across files does not work correctly

Change-Id: Idd1d01a99b33d06ac21bc896279971ac4a805550
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183973
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184073